adam wip